--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -35,4 +35,5 @@ retrofit-converter-gson = { group = "com.squareup.retrofit2", name = "converter-
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
+kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 kotlin-compose = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
